Trying Service on real api call